@@ -72,10 +72,17 @@
 	id<CCEventDelegate> eventDelegate_;
 }
 
+/** Event delegate */
 @property (nonatomic, readwrite, assign) id<CCEventDelegate> eventDelegate;
 
-// initializes the CCGLView with a frame rect and an OpenGL context
+/** initializes the CCGLView with a frame rect and an OpenGL context */
 - (id) initWithFrame:(NSRect)frameRect shareContext:(NSOpenGLContext*)context;
+
+/** uses and locks the OpenGL context */
+-(void) lockOpenGLContext;
+
+/** unlocks the openGL context */
+-(void) unlockOpenGLContext;
 
 // private
 +(void) load_;
